--- a/HelloWorld/pom.xml
+++ b/HelloWorld/pom.xml
@@ -33,28 +33,11 @@
 				<execution>
 					<id>attach-javadocs</id>
 					<goals>
-						<goal>jar</goal>
+						<goal>default</goal>
 					</goals>
 				</execution>
 			</executions>
 		</plugin>
-		<plugin>  
-               <groupId>org.apache.maven.plugins</groupId>  
-               <artifactId>maven-jxr-plugin</artifactId>  
-               <version>2.1</version>  
-               <configuration>  
-                 <aggregate>true</aggregate>  
-               </configuration>  
-             </plugin>  
-             <!-- Checks projects code conventions -->  
-             <plugin>  
-               <groupId>org.apache.maven.plugins</groupId>  
-               <artifactId>maven-checkstyle-plugin</artifactId>  
-               <version>2.6</version>  
-               <configuration>  
-                 <configLocation>check_style.xml</configLocation>  
-               </configuration>  
-             </plugin>  
 	  </plugins>
 	</build>
 </project>
